feat: minigrid created and working

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -218,3 +218,13 @@ debug:
     .*\.hidden: 3
     .*\.blocks: 4
     .*\.depth: 2
+
+
+# NUEVO: MiniGrid
+minigrid:
+  task: 5x5
+  run: { steps: 5e4, envs: 1, train_ratio: 256 }
+
+minigrid8:
+  task: 8x8
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
