feature: new env for different sizes

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -223,8 +223,5 @@ debug:
 # NUEVO: MiniGrid
 minigrid:
   task: minigrid_5x5
+  save_every: 10
   run: { steps: 5e4, envs: 1, train_ratio: 256 }
-
-minigrid8:
-  task: minigrid_8x8
-  run: {steps: 5e4, envs: 1, train_ratio: 256}
