--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -224,3 +224,8 @@ debug:
 minigrid:
   task: minigrid_5x5
   run: { steps: 5e4, envs: 1, train_ratio: 256 }
+
+
+cookiepedro:
+  task: cookieenv_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
