deterministic cookie env

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -233,3 +233,7 @@ cookiepedro:
 cookiepedroonehot:
   task: cookieenv_18x29
   run: {steps: 5e4, envs: 1, train_ratio: 256}
+
+cookiepedrodeterministic:
+  task: cookieenv_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
