feature: new cookie env with only two cookies in one room

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -237,3 +237,7 @@ cookiepedroonehot:
 cookiepedrodeterministic:
   task: cookieenv_18x29
   run: {steps: 5e4, envs: 1, train_ratio: 256}
+
+cookiepedrotwocookies:
+  task: cookieenv_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
