feature: adding cookie pedro to the configs file

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -241,3 +241,8 @@ cookiepedrodeterministic:
 cookiepedrotwocookies:
   task: cookieenv_18x29
   run: {steps: 5e4, envs: 1, train_ratio: 256}
+
+
+cookiepedrofull:
+  task: cookieenv_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
