--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,5 @@ test_observation_raw.png
 *.fdb_latexmk
 *.fls
 *.synctex.gz
-assessing_adaptative_WMs_in_machines.out
-assessing_adaptative_WMs_in_machines.log
-curiosity_driven_exploration.log
-curiosity_driven_exploration.out
+papers/*.out
+papers/*.log
