feature: adding main configs to full fixed

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -246,3 +246,7 @@ cookiepedrotwocookies:
 cookiepedrofull:
   task: cookieenv_18x29
   run: {steps: 5e4, envs: 1, train_ratio: 256}
+
+cookiepedrofullfixed:
+  task: cookieenv_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
