--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,5 @@ stable_baselines3
 orbax-checkpoint
 imageio
 tensorflow
+git+git://github.com/ikostrikov/pytorch-a2c-ppo-acktr-gail.git#egg=a2c_ppo_acktr
+git+git://github.com/openai/baselines.git#egg=baselines
