feature: new PPO + RND to train image models

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ running_command.txt
 *ppo_middle_grid_final.zip
 test_observation_raw.png
 .venv
+.venvPPO/**
+.venvPPO
 *.DS_Store
-
+.python-version
 *.aux
 *.fdb_latexmk
 *.fls
