--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-ale_py==0.9.0
+# ale_py==0.9.0
 autorom[accept-rom-license]==0.6.1
 av
 chex
@@ -25,5 +25,3 @@ stable_baselines3
 orbax-checkpoint
 imageio
 tensorflow
-git+git://github.com/ikostrikov/pytorch-a2c-ppo-acktr-gail.git#egg=a2c_ppo_acktr
-git+git://github.com/openai/baselines.git#egg=baselines
