feature: two rooms env

--- a/dreamerv3/configs.yaml
+++ b/dreamerv3/configs.yaml
@@ -254,3 +254,7 @@ cookiepedrofullfixed:
 corridor:
   task: corridor_32
   run: {steps: 5e4, envs: 1, train_ratio: 256}
+
+tworooms:
+  task: tworooms_18x29
+  run: {steps: 5e4, envs: 1, train_ratio: 256}
