feature: creating working PPO RND

--- a/PPO_RND/requirements.txt
+++ b/PPO_RND/requirements.txt
@@ -20,6 +20,7 @@ ninjax
 einops
 gym
 git+https://github.com/pedropalmav/cookie-env.git 
+opencv-python
 # --no-deps --ignore-requires-python
 
 # pyenv shell 3.12.5
