--- a/PPO_RND/requirements.txt
+++ b/PPO_RND/requirements.txt
@@ -22,6 +22,7 @@ gym
 git+https://github.com/pedropalmav/cookie-env.git 
 opencv-python
 pandas
+seaborn
 # --no-deps --ignore-requires-python
 pip install sb3-contrib
 
